--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "node_modules",
     "build",
     "dist",
-    "**/*.test.ts"
+    "**/*.test.ts",
+    "server/db/storage.ts"
   ],
   "compilerOptions": {
     "incremental": true,
