feat(server): add caching

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ DATABASE_URL=
 
 # Secret used to sign session cookies
 SESSION_SECRET=change-me
+# Cache TTL in seconds for heavy queries
+CACHE_TTL=60
