docs: update setup instructions

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ DATABASE_URL=
 SESSION_SECRET=change-me
 # Cache TTL in seconds for heavy queries
 CACHE_TTL=60
+# Log level: info, warn, or error
+LOG_LEVEL=info
