--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc -p tsconfig.check.json",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:seed": "tsx server/db/seed.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
