--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
 # Supabase / PostgreSQL connection string
 SUPABASE_DATABASE_URL=postgresql://USER:PASSWORD@HOST:5432/DATABASE
 
+# Supabase project details
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=public-anon-key
+SUPABASE_SERVICE_ROLE_KEY=service-role-key
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=public-anon-key
+
 # Optional: same URL used by Drizzle
 DATABASE_URL=
 
