--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc -p tsconfig.check.json",
+    "test": "node --test",
     "db:push": "drizzle-kit push",
     "db:seed": "tsx server/db/seed.ts"
   },
