--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc -p tsconfig.check.json",
     "db:push": "drizzle-kit push",
-    "db:seed": "tsx server/db/seed.ts"
+    "db:seed": "tsx server/db/seed.ts",
+    "test:api": "tsx server/routes/curriculum-weeks.test.js && tsx server/routes/user-preferences.api.test.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
